# editor

./: CMakeLists.txt  README.md
app/: CMakeLists.txt  main.cpp  resources.qrc  test_objects.json
app/levels/: test01.json
app/objects/: objects.json
app/ui/: ActivityTracker.cpp  ActivityTracker.h  Actor.cpp  Actor.h  ActorDisplayController.cpp  ActorDisplayController.h  ActorEditor.cpp  ActorEditor.h  AssetView.h  LevelController.cpp  LevelController.h  LevelView.cpp  LevelView.h  MainWindow.cpp  MainWindow.h  Rected.cpp  Rected.h
core/: CMakeLists.txt
core/include/editor/: ConfigReader.h  Object.h  Properties.h  Property.h
core/src/: ConfigReader.cpp  ConfigReader.h  Object.cpp  Object.h  Properties.h  Property.cpp  Property.h
tests/: CMakeLists.txt  ConfigReaderTests.cpp  readProperty.json  test_objects.json
tests/examples/: test_objects.json
